package fr.septmg.ThreeSpotGame2;

public enum AdjDirection {
    //NULL,
    UP,
    RIGHT,
    // BOTH,
}