package fr.septmg.ThreeSpotGame2;

public enum ColorCase {
    EMPTY,
    RED,
    WHITE,
    BLUE,
}
